# ecommerce-pipelines

./: README.md  main.py  pyproject.toml
DBC-Archieve/: ecommerce-pipelines.dbc
bronze/: customers.ipynb  orders.ipynb  products.ipynb
gold/: product_summary.ipynb
silver/: customers.ipynb  orders.ipynb  products.ipynb
source/: setup.ipynb
tests/: test_column_transformations.py  test_data_quality_transformations.py  test_runner.ipynb  test_sample.py  test_transformations.py
tests/reports/: report.html
utils/: dwh_utils.py  transformation_utils.py
